Bug 451999 - Settings window of krunner has Wayland generic icon
Summary: Settings window of krunner has Wayland generic icon
Status: VERIFIED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2022-03-28 15:19 UTC by Patrick Silva
Modified: 2022-03-29 19:51 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (509.58 KB, image/png)
2022-03-28 15:19 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-03-28 15:19:59 UTC
Created attachment 147794 [details]
screenshot

STEPS TO REPRODUCE
1. use Wayland session
2. press alt+space
3. click on the leftmost button of krunner

OBSERVED RESULT
settings window of krunner opens with Wayland generic icon.
Please see the attached screenshot.

EXPECTED RESULT
Settings window should have its own icon

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.24.80
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Graphics Platform: Wayland
Comment 1 Harald Sitter 2022-03-29 11:24:43 UTC
krunner needs a NoDisplay desktop file added I'm guessing
Comment 2 Alexander Lohnau 2022-03-29 13:30:16 UTC
Git commit 9d2dbdb83377b67ef2bdb97bd76c5b28ba6c8576 by Alexander Lohnau.
Committed on 29/03/2022 at 13:29.
Pushed by alex into branch 'master'.

Add desktop file with NoDisplay=true for KRunner KCM

This is needed for displaying a proper icon on wayland

M  +1    -1    kcms/runners/CMakeLists.txt
A  +9    -0    kcms/runners/kcm_krunnersettings.desktop

https://invent.kde.org/plasma/plasma-desktop/commit/9d2dbdb83377b67ef2bdb97bd76c5b28ba6c8576
Comment 3 Nate Graham 2022-03-29 16:00:19 UTC
I'm afraid this doesn't fix the problem for me. The window still has the generic wayland icon.
Comment 4 Nicolas Fella 2022-03-29 16:12:27 UTC
yes, the patch is not correct.

The patch was for the KRunner settings in systemsetting, but that's not the settings that this is about. This is about the newly added settings window in krunner directly.

It seems like krunner already has a correctly named desktop file with an icon, so not sure why it's not working. May be a bug in the taskmanager or kwin
Comment 5 Fushan Wen 2022-03-29 16:13:28 UTC
The KCM window is opened by using KCMultiDialog. Should we use kcmshell5 instead?
Comment 6 Nate Graham 2022-03-29 16:22:29 UTC
Yes please. :)
Comment 7 Alexander Lohnau 2022-03-29 18:47:26 UTC
Git commit 9a5491ef69b3f80ede4db8dc43b6067a3acddd03 by Alexander Lohnau.
Committed on 29/03/2022 at 16:26.
Pushed by alex into branch 'master'.

Use kcmshell5 to launch KRunner KCM

M  +0    -1    krunner/CMakeLists.txt
M  +2    -7    krunner/view.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9a5491ef69b3f80ede4db8dc43b6067a3acddd03
Comment 8 Nate Graham 2022-03-29 19:51:32 UTC
Now it's fixed! Thank you.