Use kcmshell5 to launch KRunner KCM

BUG: 451999